@@ -1,15 +1,16 @@
 package io.github.tobyrue.btc.spells;
 
 import io.github.tobyrue.btc.enums.SpellTypes;
+import io.github.tobyrue.btc.regestries.ModMaps;
 import io.github.tobyrue.btc.spell.ChanneledSpell;
 import io.github.tobyrue.btc.spell.GrabBag;
 import net.minecraft.entity.LivingEntity;
 import net.minecraft.entity.effect.StatusEffect;
 import net.minecraft.entity.effect.StatusEffectCategory;
 import net.minecraft.entity.effect.StatusEffectInstance;
-import net.minecraft.particle.ParticleEffect;
 import net.minecraft.particle.ParticleTypes;
-import net.minecraft.server.world.ServerWorld;
+import net.minecraft.registry.entry.RegistryEntry;
+import net.minecraft.util.Pair;
 
 import java.util.ArrayList;
 import java.util.Collection;
@@ -17,10 +18,10 @@ import java.util.List;
 import java.util.WeakHashMap;
 
 public class SpellOfDissolution extends ChanneledSpell {
-    private static final WeakHashMap<LivingEntity, List<StatusEffectInstance>> STORED_EFFECTS = new WeakHashMap<>();
+    private static final WeakHashMap<LivingEntity, List<RegistryEntry<StatusEffect>>> STORED_EFFECTS = new WeakHashMap<>();
 
     public SpellOfDissolution() {
-        super(SpellTypes.GENERIC, 200, 1, DistributionLevels.DAMAGE_CROUCH_AND_MOVE, true, ParticleTypes.REVERSE_PORTAL, ParticleAnimation.SPIRAL);
+        super(SpellTypes.GENERIC, 200, 1, new Disturb(DistributionLevels.DAMAGE_CROUCH_AND_MOVE, 200, 12), true, ParticleTypes.REVERSE_PORTAL, ParticleAnimation.SPIRAL);
     }
 
     @Override
@@ -30,37 +31,42 @@ public class SpellOfDissolution extends ChanneledSpell {
 
     @Override
     protected void useChanneled(SpellContext ctx, GrabBag args, int tick) {
-        var user = ctx.user();
-        var world = ctx.world();
-        var pos = ctx.pos();
+        LivingEntity user = ctx.user();
 
-        Collection<StatusEffectInstance> active = user.getStatusEffects();
+        STORED_EFFECTS.putIfAbsent(user, new ArrayList<>());
+        List<RegistryEntry<StatusEffect>> stored = STORED_EFFECTS.get(user);
 
-        // Filter to only negative effects
-        for (StatusEffectInstance eff : active) {
-            if (eff.getEffectType().value().getCategory() == StatusEffectCategory.HARMFUL) continue;
-            List<StatusEffectInstance> s = List.of();
-            if (tick <= 1) {
-                STORED_EFFECTS.put(user, List.of());
+        if (tick == 0) {
+            stored.clear();
+
+            for (StatusEffectInstance eff : user.getStatusEffects()) {
+                RegistryEntry<StatusEffect> type = eff.getEffectType();
+                if (type.value().getCategory() == StatusEffectCategory.HARMFUL) {
+                    stored.add(type);
+                }
             }
-
-            STORED_EFFECTS.get(user).add(eff);
         }
 
-        int interval = Math.max(1, STORED_EFFECTS.isEmpty() ? 1 : castTime / STORED_EFFECTS.get(user).size());
+        if (stored.isEmpty()) return;
 
-        if (tick % interval == 0) {
-            StatusEffectInstance toRemove = STORED_EFFECTS.get(user).getFirst();
-            user.removeStatusEffect(toRemove.getEffectType());
-            System.out.println("Removed Effect: " + toRemove);
-            STORED_EFFECTS.get(user).removeFirst();
-//            if (user.getWorld() instanceof ServerWorld server) {
-//                server.spawnParticles(
-//                        net.minecraft.particle.ParticleTypes.REVERSE_PORTAL,
-//                        user.getX(), user.getY() + user.getHeight() / 2.0, user.getZ(),
-//                        10, 0.3, 0.5, 0.3, 0.05
-//                );
-//            }
+        int interval = Math.max(1, castTime / stored.size());
+
+        if (tick % interval == 0 && tick != 0) {
+
+            RegistryEntry<StatusEffect> type = stored.remove(0);
+
+            boolean removed = user.removeStatusEffect(type);
+            System.out.println("Removed? " + removed + " -> " + type.getIdAsString());
+
+            RegistryEntry<StatusEffect> opposite = ModMaps.EFFECT_OPPOSITES.get(type);
+            System.out.println("Effect Removed: " + type);
+
+            if (opposite != null && opposite.value().isBeneficial()) {
+                System.out.println("Effect Added: " + opposite.getIdAsString());
+                user.addStatusEffect(
+                        new StatusEffectInstance(opposite, 200, 0)
+                );
+            }
         }
     }
 }
